--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="tranceivers.html">Tranceivers</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="purchase.html">Purchase</a></li>
+        <li><a href="check out.html">Check Out</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
@@ -41,7 +42,7 @@
             broadcast is FM and AM.
         </p>
         <img src="img/EMS.jpg" width="300">
-        
+        <small>&copy;Australian Radiation Protection and Nuclear Safety Agency/AUS GOV</small>
         <h3>
             Radio
         </h3>
