--- a/about.html
+++ b/about.html
@@ -15,13 +15,14 @@
         <li><a href="tranceivers.html">Tranceivers</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="purchase.html">Purchase</a></li>
+        <li><a href="check out.html">Check Out</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
 <section>
     <h1>
         About
-        <h2>Welcome to the world of ham radio</h2>
+        <h3>Welcome to the world of ham radio</h3>
         <p>Hello Everyone, This webite is dedicated to the Amateur radio enthusiasts. As an Electrical Engineer I have curosity about how this nature's force provides
         us the information through the space even without air. So I decided to create a website which will keep on providing knowledge and information on this topic.
         </p>
