--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <li><a href="tranceivers.html">Tranceivers</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="purchase.html">Purchase</a></li>
+        <li><a href="check out.html">Check Out</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
@@ -36,7 +37,7 @@
         <textarea name="comment" id="message" cols="30" rows="10"></textarea><br>
 
         <input type="submit" value="Submit">
-        
+        <input type="reset" value="Reset">
     </form><br>
 
 </section>
