--- a/products.html
+++ b/products.html
@@ -15,6 +15,7 @@
         <li><a href="tranceivers.html">Tranceivers</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="purchase.html">Purchase</a></li>
+        <li><a href="check out.html">Check Out</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
